[package]
name = "copes"
version = "1.1.0-dev"
authors = ["Juan Palacios <jpalaciosdev@gmail.com>"]
edition = "2021"
rust-version = "1.77"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0"
clap = "4.0"
log = "0.4"
simple_logger = { version = "5.0.0", default-features = false }
libc = "0.2"
ctrlc = "3.4"
termcolor = "1.4"

[build-dependencies]
bindgen = "0.68.1"
